Overflow bugs fixes

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -225,7 +225,7 @@
 
 .headerMenuItems {
   display: flex;
-  padding: 10px;
+  padding: 3px;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
